k8s/locust-load-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locust-master
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: locust-master
  template:
    metadata:
      labels:
        app: locust-master
    spec:
      containers:
        - name: locust-master
          image: locustio/locust
          ports:
            - containerPort: 8089
            - containerPort: 5557
          volumeMounts:
            - name: locust-scripts
              mountPath: /mnt/locust
      volumes:
        - name: locust-scripts
          configMap:
            name: locust-scripts
---
apiVersion: v1
kind: Service
metadata:
  name: locust-master
  namespace: default
spec:
  selector:
    app: locust-master
  ports:
    - name: web-ui
      port: 8089
      targetPort: 8089
    - name: master-p1
      port: 5557
      targetPort: 5557
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locust-worker
  namespace: default
spec:
  replicas: 5
  selector:
    matchLabels:
      app: locust-worker
  template:
    metadata:
      labels:
        app: locust-worker
    spec:
      containers:
        - name: locust-worker
          image: locustio/locust
          volumeMounts:
            - name: locust-scripts
              mountPath: /mnt/locust
      volumes:
        - name: locust-scripts
          configMap:
            name: locust-scripts
