k8s/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: learning-hub-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: learning-hub-vs
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - learning-hub-gateway
  http:
    - match:
        - uri:
            prefix: /api/payment/
      route:
        - destination:
            host: payment-service
            port:
              number: 8080
          weight: 100
    - match:
        - uri:
            prefix: /api/
      route:
        - destination:
            host: backend-service
            port:
              number: 8000
    - route:
        - destination:
            host: frontend-service
            port:
              number: 80
